{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 11,
  "lineage": "264e7b0e-c995-e5e6-67cb-0589e04247c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0356f93f0c9b78705",
            "domain": "vpc",
            "id": "eipalloc-0356f93f0c9b78705",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-230-109-63.us-west-2.compute.amazonaws.com",
            "public_ip": "44.230.109.63",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat-gw-1",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "dev-nat-gw-1",
              "environment": "dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:475775181858:internet-gateway/igw-06636cf0ce9121e2f",
            "id": "igw-06636cf0ce9121e2f",
            "owner_id": "475775181858",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0c699d866e9e9b0fa"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0356f93f0c9b78705",
            "connectivity_type": "public",
            "id": "nat-04c9087f93698b49e",
            "network_interface_id": "eni-0880ebf8e52aab40f",
            "private_ip": "10.0.3.246",
            "public_ip": "44.230.109.63",
            "subnet_id": "subnet-0545b1c33a7d66769",
            "tags": {
              "Name": "dev-nat-gw-1",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "dev-nat-gw-1",
              "environment": "dev"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:475775181858:route-table/rtb-096e11e4f1e105046",
            "id": "rtb-096e11e4f1e105046",
            "owner_id": "475775181858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04c9087f93698b49e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-private-subnet-1",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "dev-route-private-subnet-1",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c699d866e9e9b0fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:475775181858:route-table/rtb-03baeb9560cbaf487",
            "id": "rtb-03baeb9560cbaf487",
            "owner_id": "475775181858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06636cf0ce9121e2f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-public-subnets",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "dev-route-public-subnets",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c699d866e9e9b0fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09049b8b0ac664c42",
            "route_table_id": "rtb-096e11e4f1e105046",
            "subnet_id": "subnet-04f7cb9b196723542"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8a7fec7580cec52",
            "route_table_id": "rtb-03baeb9560cbaf487",
            "subnet_id": "subnet-0545b1c33a7d66769"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:475775181858:subnet/subnet-04f7cb9b196723542",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f7cb9b196723542",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475775181858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-1",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "dev-private-1",
              "environment": "dev"
            },
            "vpc_id": "vpc-0c699d866e9e9b0fa"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:475775181858:subnet/subnet-0545b1c33a7d66769",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0545b1c33a7d66769",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "475775181858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet-1",
              "environment": "dev",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-public-subnet-1",
              "environment": "dev",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c699d866e9e9b0fa"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:475775181858:vpc/vpc-0c699d866e9e9b0fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0537989a2c0cc37c4",
            "default_route_table_id": "rtb-085d8d8d34cdbd08b",
            "default_security_group_id": "sg-0ebc5da8a9f4ceb8f",
            "dhcp_options_id": "dopt-046d08ab5e02d5de6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c699d866e9e9b0fa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085d8d8d34cdbd08b",
            "owner_id": "475775181858",
            "tags": {
              "Name": "dev-vpc",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "dev-vpc",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}